--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
 			<ul>
 				{% for conference in conferences %}
 					<li>
-						<a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a>
+						<a href="{{ path('conference', { Slug: conference.Slug }) }}">{{ conference }}</a>
 					
 				{% endfor %}
                 </li><a href="{{path('admin') }}">Admin</a>
