--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -7,7 +7,7 @@
 	{% for conference in conferences %}
 		<h4>{{ conference }}</h4>
 		<p>
-			 <a href="{{ path('conference', { id: conference.id }) }}">View</a>
+			 <a href="{{ path('conference', { Slug: conference.Slug }) }}">View</a>
 		</p>
 	{% endfor %}
 {% endblock %}
