--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -13,10 +13,10 @@
           <p>{{ comment.text }}</p>
       {% endfor %}
          {% if previous >= 0 %}
-            <a href="{{ path('conference', { id: conference.id, offset: previous }) }}">Previous</a>
+            <a href="{{ path('conference', { Slug: conference.Slug, offset: previous }) }}">Previous</a>
         {% endif %}
         {% if next < comments|length %}
-            <a href="{{ path('conference', { id: conference.id, offset: next }) }}">Next</a>
+            <a href="{{ path('conference', { Slug: conference.Slug, offset: next }) }}">Next</a>
         {% endif %}
   {% else %}
       <div>No comments have been posted yet for this conference.</div>
